[package]
name = "libafl_v8"
version = "0.8.1"
authors = ["Addison Crump <research@addisoncrump.info>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.7", features = ["compile-time-rng"] }
deno_ast = { version = "0.17.0", features = ["transpiling"] }
deno_core = "0.154.0"
deno_runtime = "0.80.0"
import_map = "0.12.1"
libafl = { path = "../libafl", version = "0.8.1" }
send_wrapper = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.20.1", features = ["rt", "rt-multi-thread", "sync"] }
